fix align-items bug for .main css class

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,9 @@
 
 .main {
   text-align: center;
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
